@@ -8,7 +8,7 @@ import javafx.scene.layout.VBox;
 
 
 public class Application extends javafx.application.Application {
-
+    //--module-path "lib\javafx-sdk-17.0.0.1\lib" --add-modules javafx.controls,javafx.fxml
     @Override
     public void start(Stage stage) {
         try {
